# safeprop

./: .gitignore  CHANGELOG.md  cabal.project  safeprop.cabal
src/: Example.hs
