cabal-version: 3.4
name: safeprop
version: 0.1.0.0
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Example
  build-depends:
    , liquid-ghc-prim
    , liquid-base
    , liquid-prelude
    , liquidhaskell ==0.8.10.7
    , liquid-fixpoint ==0.8.10.7
    , rest-rewrite ==0.1.1
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fplugin=LiquidHaskell
